Simplify and speed up gc block store listing into reachability db